# discoreg

./: .gitignore  Pipfile  Procfile  README.md  example.env  pyproject.toml
bot/: bot.py
discoreg/: manage.py
discoreg/discoreg/: asgi.py  settings.py  urls.py  wsgi.py
discoreg/nextupbot/: admin.py  apps.py  models.py
discoreg/nextupbot/fixtures/: session_notifications.json
discoreg/nextupbot/management/commands/: imagescan.py  nextupbot copy.py  nextupbot.py  rolebot.py
discoreg/nextupbot/migrations/: 0001_initial.py  0002_auto_20200725_0423.py  0003_auto_20210730_0639.py  0004_alter_sessionnotification_options.py
discoreg/registrations/: admin.py  models.py  urls.py  views.py
discoreg/registrations/migrations/: 0001_initial.py  0002_auto_20200719_0646.py  0003_discordrole_assign_by_default.py  0004_auto_20200720_0524.py  0005_emailrole_discord_user_id.py  0006_auto_20200720_1612.py  0007_auto_20200720_1631.py  0008_auto_20210731_0402.py
discoreg/registrations/templates/: 404.html  500.html  base.html
discoreg/registrations/templates/registrations/: error.html  index.html  link.html  success.html
discoreg/registrations/views/: __init__.py  tito.py
discoreg/util/: load_talks.py
